# automated-testing-template

./: README.md  cookiecutter.json  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: setup-repository.yml  tests.yml
src/PACKAGE_NAME/: PACKAGE_NAME.py
tests/: conftest.py  test_PACKAGE_NAME.py  test_{{cookiecutter.name}}.py
