[metadata]
name = PACKAGE_NAME
description = DESCRIPTION
author = Adam Wownysz
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    PACKAGE_NAME
install_requires =
    numpy>=1.20.3
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=4.0
    tox>=3.24

[options.package_data]
PACKAGE_NAME = py.typed

[flake8]
max-line-length = 79
